src/objects/mAg_Household__c.object
<CustomObject>
    <fields>
        <fullName>IncomePercentComingFarming__c</fullName>
        <label>IncomePercentComingFarming</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstitutionAvailCropInsurance__c</fullName>
        <label>InstitutionAvailCropInsurance</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InteractReceivedExtensionServices__c</fullName>
        <label>InteractReceivedExtensionServices</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IntervieweeBirthDate__c</fullName>
        <label>Interviewee Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntervieweeGender__c</fullName>
        <label>Interviewee Gender</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IntervieweeName__c</fullName>
        <label>Interviewee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involved_Crop_Husbandry__c</fullName>
        <label>Involved Crop Husbandry</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KnowStaffFromAgriculturistOffice__c</fullName>
        <label>KnowStaffFromAgriculturistOffice</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LightningSource__c</fullName>
        <label>LightningSource</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ListenRadio__c</fullName>
        <label>ListenRadio</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LoseWeight__c</fullName>
        <label>LoseWeight</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LowestInterestRate__c</fullName>
        <label>LowestInterestRate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeansContactAgroAgent__c</fullName>
        <label>MeansContactAgroAgent</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MemberFarmingGroup__c</fullName>
        <label>Member Farming Group</label>
        <picklist>
            <picklistValues>
                <fullName>1 Oo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hindi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MobileMoneyServicesUsed__c</fullName>
        <label>MobileMoneyServicesUsed</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>MostExpensiveProductionItemsRank1__c</fullName>
        <label>MostExpensiveProductionItemsRank1</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MostExpensiveProductionItemsRank2__c</fullName>
        <label>MostExpensiveProductionItemsRank2</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MostExpensiveProductionItemsRank3__c</fullName>
        <label>MostExpensiveProductionItemsRank3</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NationalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>National ID</description>
        <inlineHelpText>National ID</inlineHelpText>
        <label>National ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NotUseInfoObtainedTheseSources__c</fullName>
        <label>NotUseInfoObtainedTheseSources</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OtherAdditionalFundingSources__c</fullName>
        <label>OtherAdditionalFundingSources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHouseRoofMaterial__c</fullName>
        <label>OtherHouseRoofMaterial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHowContactStaffAgroOffice__c</fullName>
        <label>OtherHowContactStaffAgroOffice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHowFundIsGiven__c</fullName>
        <label>OtherHowFundIsGiven</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHowLongNeedPayLoan__c</fullName>
        <label>OtherHowLongNeedPayLoan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHowNormallySave__c</fullName>
        <label>OtherHowNormallySave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherHowOftenMakeMobileMoneyTransactions__c</fullName>
        <label>OtherHowOftenMakeMobileMoneyTransactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherIncomeSources__c</fullName>
        <label>OtherIncomeSources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherInstitutionAvailCropInsurance__c</fullName>
        <label>OtherInstitutionAvailCropInsurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherLightningSource__c</fullName>
        <label>OtherLightningSource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMobileMoneyServicesUsed__c</fullName>
        <label>OtherMobileMoneyServicesUsed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMostExpensiveProductionItemsRank1__c</fullName>
        <label>OtherMostExpensiveProductionItemsRank1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMostExpensiveProductionItemsRank2__c</fullName>
        <label>OtherMostExpensiveProductionItemsRank2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMostExpensiveProductionItemsRank3__c</fullName>
        <label>OtherMostExpensiveProductionItemsRank3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherPlaceSellCacao__c</fullName>
        <label>Other Place Sell Cacao</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherRelationshipHH__c</fullName>
        <label>Other Relationship HH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherSeed__c</fullName>
        <label>OtherSeed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherSourceIncome__c</fullName>
        <label>Other Source Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherSourceInfoNewProdsFarmTech__c</fullName>
        <label>OtherSourceInfoNewProdsFarmTech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherSourceWeatherInfo__c</fullName>
        <label>OtherSourceWeatherInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTypeFarmingAdviceUsuallySeek__c</fullName>
        <label>OtherTypeFarmingAdviceUsuallySeek</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTypeInfoObtainSourceNewProdFarmTech__c</fullName>
        <label>OtherTypeInfoObtainSourceNewProdFarmTech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherTypeToilet__c</fullName>
        <label>OtherTypeToilet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWhereGetFarmSupplies__c</fullName>
        <label>Other Where Get Farm Supplies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWhereObtainInfoFinancialServices__c</fullName>
        <label>OtherWhereObtainInfoFinancialServices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWhereSellHarvest__c</fullName>
        <label>Other Where Sell Harvest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWhoDoHarvesting__c</fullName>
        <label>Other Who Do Harvesting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWhoHouseholdMembersSellCrops__c</fullName>
        <label>Other Who Household Members Sell Crops</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherWhyImportantInteractStaffAgroOffice__c</fullName>
        <label>OtherWhyImportantInteractStaffAgroOffice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OthersSourceSeekAdviceFarmingProblems__c</fullName>
        <label>OthersSourceSeekAdviceFarmingProblems</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OthersWhoOwnsMobilePhone__c</fullName>
        <label>OthersWhoOwnsMobilePhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Othersss__c</fullName>
        <label>Othersss</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PercentHarvestSell__c</fullName>
        <label>Percent Harvest Sell</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PercentOtherCropSell__c</fullName>
        <label>Percent Other Crop Sell</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PracticingGAP__c</fullName>
        <label>PracticingGAP</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuantBuyersHarvest__c</fullName>
        <label>Quant Buyers Harvest</label>
        <picklist>
            <picklistValues>
                <fullName>1 Kadalasan ay mayruon akong ibat-ibang tao o lugar na binebentahan ng aking produkto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Kadalasan ay mayruon akong isa o dalawang tao o pinupuntahan para bentahan ng aking mga produkto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Wala akong regular na tao o lugar na binebentahan ng aking produkto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReceivedextensionServicesFromCoops__c</fullName>
        <label>ReceivedextensionServicesFromCoops</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReceivedextensionServicesFromLeadFarmers__c</fullName>
        <label>ReceivedextensionServicesFromLeadFarmers</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReceivedextensionServicesFromNGO__c</fullName>
        <label>ReceivedextensionServicesFromNGO</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReceivedextensionServicesFromPCAAgency__c</fullName>
        <label>ReceivedextensionServicesFromPCAAgency</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReceivedextensionServicesFromPracticion__c</fullName>
        <label>ReceivedextensionServicesFromPracticion</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelationshipHH__c</fullName>
        <label>Relationship HH</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeekAdviseFarming__c</fullName>
        <label>SeekAdviseFarming</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellPortionHarvestOtherCrop__c</fullName>
        <label>Sell Portion Harvest Other Crop</label>
        <picklist>
            <picklistValues>
                <fullName>1 Oo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hindi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SellPortionHarvest__c</fullName>
        <label>Sell Portion Harvest</label>
        <picklist>
            <picklistValues>
                <fullName>1 Oo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hindi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SetAppointmentsStaffAgroOffice__c</fullName>
        <label>SetAppointmentsStaffAgroOffice</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeHighInterest__c</fullName>
        <label>SeverityDegreeHighInterest</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeInsuficientCapital__c</fullName>
        <label>SeverityDegreeInsuficientCapital</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeLackFarmToolEquipment__c</fullName>
        <label>SeverityDegreeLackFarmToolEquipment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeLackProcessingFacility__c</fullName>
        <label>SeverityDegreeLackProcessingFacility</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeLackTechBackground__c</fullName>
        <label>SeverityDegreeLackTechBackground</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeLargeDebts__c</fullName>
        <label>SeverityDegreeLargeDebts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeLowMarketPrice__c</fullName>
        <label>SeverityDegreeLowMarketPrice</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeNoMarket__c</fullName>
        <label>SeverityDegreeNoMarket</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreePoorHarvestDueBadweather__c</fullName>
        <label>SeverityDegreePoorHarvestDueBadweather</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreePoorHarvestDueDrought__c</fullName>
        <label>SeverityDegreePoorHarvestDueDrought</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreePoorHarvestDuePestDiseases__c</fullName>
        <label>SeverityDegreePoorHarvestDuePestDiseases</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SeverityDegreeexpensiveCostInputs__c</fullName>
        <label>SeverityDegreeexpensiveCostInputs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceInfoNewProductsFarmingTech__c</fullName>
        <label>SourceInfoNewProductsFarmingTech</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SourceSeekAdviceFarmingProblems__c</fullName>
        <label>SourceSeekAdviceFarmingProblems</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SourceWeatherInfo__c</fullName>
        <label>SourceWeatherInfo</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SourcesIncome__c</fullName>
        <label>SourcesIncome</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>StopEatingWholeDay__c</fullName>
        <label>StopEatingWholeDay</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyConsent__c</fullName>
        <label>Survey Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalSalesCacao__c</fullName>
        <label>Total Sales Cacao</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSalesCommoditiesHarvestMonthly__c</fullName>
        <label>Total Sales Commodities Harvest Monthly</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSalesOtherHarvest__c</fullName>
        <label>Total Sales Other Harvest</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeFarmingAdviceUsuallySeek__c</fullName>
        <label>TypeFarmingAdviceUsuallySeek</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TypeInfoObtainedSourcesNewProdsFarmTech__c</fullName>
        <label>TypeInfoObtainedSourcesNewProdsFarmTech</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TypeToilet__c</fullName>
        <label>TypeToilet</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UseInfoObtainedTheseSources__c</fullName>
        <label>UseInfoObtainedTheseSources</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WasntEnoughFoodDontHaveMoney__c</fullName>
        <label>WasntEnoughFoodDontHaveMoney</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WatchTV__c</fullName>
        <label>WatchTV</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhatUseWeatherInformation__c</fullName>
        <label>WhatUseWeatherInformation</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhereGetFarmSuppliesFromAgroDealer__c</fullName>
        <label>Where Get Farm Supplies From Agrodelaer</label>
        <picklist>
            <picklistValues>
                <fullName>1 Ibinibigay ng may-ari ng lupa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Kasamahang magsasaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Agricultural input dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 NGO&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Government institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Kooperatiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Sales agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Iba pa (paki sulat)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhereObtainInfoFinancialServices__c</fullName>
        <label>WhereObtainInfoFinancialServices</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhereSellCacao__c</fullName>
        <label>Where Sell Cacao</label>
        <picklist>
            <picklistValues>
                <fullName>1 Kapwa magsasaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Traders/Viajero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Pamilihang bayan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Nagtitinda ng gamit pansaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Ahente ng PCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Kooperatiba/Samahan ng magsasaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Iba pa 9specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhereSellHarvest__c</fullName>
        <label>Where Sell Harvest</label>
        <picklist>
            <picklistValues>
                <fullName>1 Kapwa magsasaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Traders/Viajero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Pamilihang bayan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Nagtitinda ng gamit pansaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Ahente ng PCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Kooperatiba/Samahan ng magsasaka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Iba pa 9specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhichFarmSuppliesGetFromAgroDealer__c</fullName>
        <label>Which Farm Supplies Get From Agro Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>1 Binhi/punla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Pestisidyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Abono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Iba pang kagamitang pansaka</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhichHarvestEventuallyMarket__c</fullName>
        <label>Which Harvest Eventually Market</label>
        <picklist>
            <picklistValues>
                <fullName>1 Buko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Niyog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Tuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Palapa ng niyog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Iba pa (pakisulat)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhichPartIsPrimaryIncomeSource__c</fullName>
        <label>Which Part Is Primary Income Source</label>
        <picklist>
            <picklistValues>
                <fullName>1 Buko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Niyog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Tuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Palapa ng niyog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Iba pa (pakisulat)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhichSell__c</fullName>
        <label>Which Sell</label>
        <picklist>
            <picklistValues>
                <fullName>1 Bunga ng cacao mismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Sariwang buto ng cacao (wet beans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Pinatuyong buto ng cacao (dried non-fermented cacao beans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Pinatuyo at pinerment/pinahilab na buto ng cacao (dried fermented beans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Tablea</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>WhoDoHarvesting__c</fullName>
        <label>Who Do Harvesting</label>
        <picklist>
            <picklistValues>
                <fullName>1 Kami mismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Contractor buyer (mamamakyaw)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Walk-in na mamimili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Iba pa (pakisulat)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>